fix stretcher linkes

--- a/src/css/posts/project-details.scss
+++ b/src/css/posts/project-details.scss
@@ -5,7 +5,6 @@
   align-items: center;
   padding: 5px;
   border-radius: 8px;
-  max-width: 800px;
   margin: 20px auto;
 }
 
@@ -50,7 +49,6 @@
     align-items: center;
     border-radius: 8px;
     margin: 20px auto;
-    max-width: 800px;
     padding: 20px;
   }
 }
